syntax = "proto3";
package MsgPB;

message CommonPingA2A{
    
}